算法：递归&分治

--- a/lcl-galaxy-datastructure/md/00-算法套路汇总.md
+++ b/lcl-galaxy-datastructure/md/00-算法套路汇总.md
@@ -37,3 +37,32 @@ class Rect{
 }
 ```
 
+
+
+## 2、递归&分治
+
+分治除了向下递归“问题”，还要向上合并“结果”，因此分治一般使用递归解决。
+
+递归三要素：
+
+​	定义需要递归的问题（重叠的子问题）
+
+​	确定递归边界
+
+​	保护和还原现场
+
+伪代码如下
+
+````java
+void doSomething(int level, int param){
+	// 具有边界
+	if(level > MAX_VALUE){
+		return;
+	}
+	// 每层的处理逻辑是一样的
+	process(level, param);
+	// 使用新的参数调用该方法
+	doSomething(level+1, new_param);
+}
+````
+
