--- a/lcl-galaxy-mybatis/homework/12.md
+++ b/lcl-galaxy-mybatis/homework/12.md
@@ -30,7 +30,7 @@ Mybatis 框架设计预留了拦截器接口 Intercepter
 
 做插件时，实现该接口，并重写其中的方法，其中 intercept 方法必须要有实现
 
-实现类上可以设置拦截的接口、拦截的方法、拦截的参数类型，其中拦截接口可以是 Exectuer、ParameterHandler、Resulhandler、StatementHandler，method 对应的是这四个接口中的方法，拦截的参数类型是拦截方法中的参数类型。
+实现类上可以设置拦截的接口、拦截的方法、拦截的参数类型，其中拦截接口可以是 Exectuer、ParameterHandler、ResultHandler、StatementHandler，method 对应的是这四个接口中的方法，拦截的参数类型是拦截方法中的参数类型。
 
 - **Executor** 是 **SQL** 执行器，包含了组装参数，组装结果集到返回值以及执行 **SQL** 的过程，粒度比较粗。
 - **StatementHandler** 用来处理 SQL 的执行过程，我们可以在这里重写 **SQL** 非常常用。
